🔧 Fix YAML syntax error in CI/CD workflow
Fixed PowerShell here-string syntax issue on line 328:
- Moved here-string to variable assignment
- Proper YAML escaping for GitHub Actions
- Maintains all functionality while fixing syntax

This should resolve the workflow validation error and allow CI/CD to run properly.

--- a/.github/workflows/ue5_build_test.yml
+++ b/.github/workflows/ue5_build_test.yml
@@ -322,23 +322,24 @@ jobs:
         
         # Generate test summary
         $summaryFile = "TestReports/test-summary.md"
-        @"
+        $summaryContent = @"
 # 🧪 KOTOR.ai Test Results
-        
+
 **Build Configuration:** ${{ env.BUILD_CONFIGURATION }}
 **Platform:** Win64
 **Timestamp:** $(Get-Date -Format 'yyyy-MM-dd HH:mm:ss UTC')
 **Commit:** ${{ github.sha }}
-        
+
 ## Test Categories
 - ✅ End-to-End Integration Tests
-- ✅ Animation & Music Pipeline Tests  
+- ✅ Animation & Music Pipeline Tests
 - ✅ Complete Game Experience Tests
 - ✅ Master Integration Test Suite
-        
+
 ## Results
 All KOTOR.ai integration tests passed successfully! 🎉
-"@ | Out-File -FilePath $summaryFile -Encoding UTF8
+"@
+        $summaryContent | Out-File -FilePath $summaryFile -Encoding UTF8
         
         Write-Host "✅ Test results processed"
 
